# keystone-verify

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: README.md  echo_profile.json  sample_cases.jsonl
profiles/: counsel.json  engage.json  reference-agent-v0.cases.jsonl  reference-agent-v0.json  reference-legal-intake-v0.cases.jsonl  reference-legal-intake-v0.json
src/keystone_verify/: __init__.py  __main__.py  cli.py  judge.py  loader.py  models.py  reporter.py  runner.py
tests/: test_judge.py  test_loader.py  test_reference_legal_intake.py  test_reference_profile.py  test_reporter.py
